# js-for-anything

src/: .gitignore  Cargo.toml  lib.rs  prelude.js  runtime.js
tests/: .gitignore  app.js  main.ts
