[package]
name = "src"
version = "0.1.0"
edition = "2021"

[lib]
name="js_for_anything"
crate-type=["cdylib"]
path="lib.rs"

[dependencies]
deno_core = "0.174.0"
libc = "0.2.144"
tokio = { version = "1.25.0", features = ["full"] }
deno_bindgen = "0.8.0"
serde = { version = "1", features = ["derive"] }
once_cell = "1.17.2"
colored = "2.0.0"
